Added information and initialized styles

--- a/static/index.html
+++ b/static/index.html
@@ -4,22 +4,23 @@
 <head>
 	<meta charset="utf-8">
 	<title>HCI Project Portfolio</title>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Scott Klemmer</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h1>Joseph Le</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Scott is an Associate Professor of Cognitive Science and Computer Science & Engineering at UC San Diego, where he is a co-founder and Associate Director of the Design Lab. He previously served as Associate Professor of Computer Science at Stanford, where he co-directed the HCI Group, held the Bredt Faculty Scholar chair, and was a founding participant in the d.school. </p>
+	<p>Joseph is a 2nd year computer science student at the University of California, San Diego. Joseph has always had a profound passion and interest for the web and its possibilities, and his experience with it extends to a little more than 5 years.</p>
 
 	<h4>Projects</h4>
 	<ol>
-		<li>Design Thinking</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
-		<li>...</li>
+		<li>StudentHero</li>
+		<li>UCSD Circle K</li>
+		<li>SD Hacs</li>
 	</ol>
 </body>
 </html>
