--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<title>HCI Project Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.css">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 
