--- a/static/index.html
+++ b/static/index.html
@@ -2,26 +2,84 @@
 
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>HCI Project Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.css">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+  <meta charset="utf-8">
+  <title>HCI Project Portfolio</title>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.css">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 
 <body>
-	<!-- this is a comment in HTML -->
-	<h1>Joseph Le</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
-	<h4>Project Portfolio</h4>
+<header>
+  <div class="title">
+    <h1>Joseph Le | Project Portfolio</h1>
+    <ul>
+      <li>
+        <i class="fa fa-map-marker"></i> La Jolla, CA
+      </li>
+      <li>
+        <i class="fa fa-university"></i> University of California, San Diego
+      </li>
+    </ul>
 
-	<!-- p means paragraph -->
-	<p>Joseph is a 2nd year computer science student at the University of California, San Diego. Joseph has always had a profound passion and interest for the web and its possibilities, and his experience with it extends to a little more than 5 years.</p>
 
-	<h4>Projects</h4>
-	<ol>
-		<li>StudentHero</li>
-		<li>UCSD Circle K</li>
-		<li>SD Hacs</li>
-	</ol>
+  </div>
+</header>
+
+<div class="content">
+  <!-- p means paragraph -->
+
+  <div id="project-1" class="project">
+    <div class="header" style="background: url(assets/img/projects/studenthero/home.png); background-position: top;
+    background-size: cover;">
+      <div class="title">
+        <h3>StudentHero</h3>
+      </div>
+    </div>
+
+
+    <div class="body">
+      <p>StudentHero is my newest project with my co-founder, Tam Pham. When completed, StudentHero will serve as a platform
+        to connect high school students to summer internships and other summer programs. The idea for StudentHero was forged
+        out of a realization that high school was already frustrating as it is without having the expectation of doing
+        something productive over the summer.</p>
+    </div>
+
+  </div>
+
+  <div id="project-2" class="project">
+    <div class="header" style="background: url(assets/img/projects/ucsdcirclek/home.png); background-position: top;
+    background-size: cover;">
+      <div class="title">
+        <h3>UCSD Circle K</h3>
+      </div>
+    </div>
+
+    <div class="body">
+      <p>With over 150 registered members in the past year, UCSD Circle K is one of the largest student service
+        organizations on the UCSD campus. Members rely greatly on the website, particularly the calendar, to find out what
+        events are available. The organization also relies on members registering their event attendance to ensure that the
+        logistics are in place for all members. This year, a whole new platform(both frontend and backend) was introduced,
+        replacing a system that was in use for more than 4 years.</p>
+    </div>
+  </div>
+
+  <div id="project-3" class="project">
+    <div class="header" style="background: url(assets/img/projects/sdhacks/home.png); background-position: top;
+    background-size: cover;">
+      <div class="title">
+        <h3>SD Hacks</h3>
+      </div>
+    </div>
+
+    <div class="body">
+      <p>SD Hacks aims to redefine Silicon Beach and establish San Diego as a major player in technological innovation. With
+        a projected attendance of more than 1000 hackers, SD Hacks requires an elegant yet highly functional and reliable
+        website to handle registrations and to deliver information to attendees.</p>
+    </div>
+
+  </div>
+</div>
 </body>
 </html>
