--- a/static/index.html
+++ b/static/index.html
@@ -19,10 +19,11 @@
         <i class="fa fa-map-marker"></i> La Jolla, CA
       </li>
       <li>
-        <i class="fa fa-university"></i> University of California, San Diego
+        <i class="fa fa-laptop"></i> <a href="http://josephle.me" target="_blank">josephle.me</a>
       </li>
     </ul>
-
+    <p class="blurb">I'm a 2nd year computer science student at the University of California, San Diego. I'm really
+      passionate about startups and creating awesome products!</p>
 
   </div>
 </header>
@@ -40,8 +41,10 @@
 
 
     <div class="body">
-      <p>StudentHero is my newest project with my co-founder, Tam Pham. When completed, StudentHero will serve as a platform
-        to connect high school students to summer internships and other summer programs. The idea for StudentHero was forged
+      <p>StudentHero is my newest project with my co-founder, Tam Pham. When completed, StudentHero will serve as a
+        platform
+        to connect high school students to summer internships and other summer programs. The idea for StudentHero was
+        forged
         out of a realization that high school was already frustrating as it is without having the expectation of doing
         something productive over the summer.</p>
     </div>
@@ -58,9 +61,12 @@
 
     <div class="body">
       <p>With over 150 registered members in the past year, UCSD Circle K is one of the largest student service
-        organizations on the UCSD campus. Members rely greatly on the website, particularly the calendar, to find out what
-        events are available. The organization also relies on members registering their event attendance to ensure that the
-        logistics are in place for all members. This year, a whole new platform(both frontend and backend) was introduced,
+        organizations on the UCSD campus. Members rely greatly on the website, particularly the calendar, to find out
+        what
+        events are available. The organization also relies on members registering their event attendance to ensure that
+        the
+        logistics are in place for all members. This year, a whole new platform(both frontend and backend) was
+        introduced,
         replacing a system that was in use for more than 4 years.</p>
     </div>
   </div>
@@ -74,8 +80,10 @@
     </div>
 
     <div class="body">
-      <p>SD Hacks aims to redefine Silicon Beach and establish San Diego as a major player in technological innovation. With
-        a projected attendance of more than 1000 hackers, SD Hacks requires an elegant yet highly functional and reliable
+      <p>SD Hacks aims to redefine Silicon Beach and establish San Diego as a major player in technological innovation.
+        With
+        a projected attendance of more than 1000 hackers, SD Hacks requires an elegant yet highly functional and
+        reliable
         website to handle registrations and to deliver information to attendees.</p>
     </div>
 
